--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "expo": "^54.0.22",
+    "expo": "^54.0.23",
     "expo-linear-gradient": "^15.0.7",
+    "react-dom": "19.1.0",
     "react-native": "^0.82.1",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.1.3"
+    "react-native-reanimated": "^4.1.3",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
